# linux-server-telegram-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  SKILL.md  config.example.yaml  docker-compose.yml  linux_bot.service  linux_monitoring.service  pyproject.toml
.github/workflows/: ci.yml
agent/: .env.example  ENDPOINTS.md  README.md  SKILL.md  workflows.md
linux_bot/: main.py
linux_monitoring/: main.py
src/linux_server_bot/: __init__.py  config.py
src/linux_server_bot/api/: auth.py  routes.py  server.py
src/linux_server_bot/bot/: app.py  callbacks.py  menus.py
src/linux_server_bot/bot/handlers/: __init__.py  backups.py  command.py  compose.py  docker.py  logs.py  pironman.py  reboot.py  scripts.py  security.py  servers.py  services.py  settings.py  sysinfo.py  system_updates.py  updates.py  wol.py
src/linux_server_bot/monitoring/: app.py
src/linux_server_bot/monitoring/checks/: containers.py  security.py  servers.py  services.py  system.py
src/linux_server_bot/shared/: auth.py  cpu.py  logging_setup.py  shell.py  startup.py  telegram.py
src/linux_server_bot/shared/actions/: __init__.py  backups.py  compose.py  docker.py  logs.py  pironman.py  security.py  servers.py  services.py  sysinfo.py  system_updates.py  updates.py  wol.py
tests/: test_config.py  test_logs.py  test_resilience.py  test_runtime_detection.py
tools/: migrate-config-layout.sh  migrate_config.py
